middle section on small screen is fixed size

--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ input {
 
 
 
-.two{
+#two{
   background: red;
 }
 
